--- a/NEWS
+++ b/NEWS
@@ -9,8 +9,9 @@ mlr_2.3:
 - exported a few very simple "getters" for tasks, see below
 - in the control objects for tuning and feature selection, the user can now enable threshold tuning
 - in the control objects for tuning and feature selection, the user can now define his own logging function
-- some minor bug fixes
+- default console logging for tuneParams and selectFeatures is more informative, it displays time and memory info
 - updated some properties of some learners
+- some minor bug fixes
 
 - new functions
 -- getTaskType, getTaskId, getTaskTargetNames
