--- a/tutorial/src/create_measure.Rmd
+++ b/tutorial/src/create_measure.Rmd
@@ -9,9 +9,9 @@ list of [&measures] or a measure that uses a non-standard misclassification cost
 
 The [&makeMeasure] function provides a simple way of constructing your own performance
 measure. Below, this is exemplified by an implementation of the mean
-misclassification error ([&mmce]) for the iris dataset. We write a simple
+misclassification error ([mmce](measures.md)) for the iris dataset. We write a simple
 function that computes the measure on the basis of the predictions and subsequently wrap it
-in a [&Measure] object. Then, we work with it as usual with the
+in a [Measure](&makeMeasure) object. Then, we work with it as usual with the
 [&performance] function.
 See the **R** documentation of the [&makeMeasure] function for details on the
 various parameters.
@@ -46,7 +46,7 @@ performance(pred, measures = mmce)
 To create a measure that involves non-standard misclassification costs you can use
 the [&makeCostMeasure] function. In order to do this, you first need to define the cost
 matrix you want to use and include all class labels. The cost matrix can then be
-wrapped in a [&Measure] object and a prediction can be evaluated as usual with the
+wrapped in a [Measure](&makeMeasure) object and a prediction can be evaluated as usual with the
 [&performance] function. See the **R** documentation of the [&makeCostMeasure] function for
 details on the various parameters.
 
