--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,8 @@ mlr_2.3:
 - in the control objects for tuning and feature selection, the user can now define his own logging function
 - default console logging for tuneParams and selectFeatures is more informative, it displays time and memory info
 - updated some properties of some learners
+- Default arguments of classif.bartMachine, classif.randomForestSRC, regr.randomForestSRC and sur.randomForestSRC
+  have been changed to allow missing data support with default settings.
 - externalized measure functions to be used on vectors.
 - some minor bug fixes
 
